--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AirBnB clone</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/100-places.css">
+    <link rel="stylesheet" href="styles/102-common.css">
+    <link rel="stylesheet" href="styles/102-header.css">
+    <link rel="stylesheet" href="styles/102-footer.css">
+    <link rel="stylesheet" href="styles/102-filters.css">
+    <link rel="stylesheet" href="styles/102-places.css">
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
@@ -32,7 +33,7 @@
             </ul>
             <h2>Dbrezeyit:</h2>
             <ul>
-              <li>Kureftu</li>
+              <li>Kuriftu</li>
               <li>Lisak resort</li>
             </ul>
           </div>
@@ -249,7 +250,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From sol the May 1 2021</h3>
+            <h3>From Peter the May 1 2021</h3>
             <ul>
               <li>
                 <p>
@@ -319,7 +320,7 @@
 
           <div class="reviews">
             <h2>1 Review</h2>
-            <h3>From Alex the December 12 2022</h3>
+            <h3>From alex the December 12 2022</h3>
             <ul>
               <li>
                 <p>Eh, it was okay.</p>
@@ -335,4 +336,3 @@
       Best School
     </footer>
   </body>
-</html>
