--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -23,7 +23,7 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. Addis Ababa/Dbrezeyit...</h4>
+          <h4>ie. Addis Ababa/Dberzeyit...</h4>
           <div class="popover">
             <h2>Addis Ababa:</h2>
             <ul>
@@ -94,7 +94,7 @@
 
           <div class="reviews">
             <h2>2 Reviews</h2>
-              <h3>From babi the February 26 2020</h3>
+              <h3>From Babi the February 26 2020</h3>
               <ul>
                 <li>
                   <p>
@@ -166,7 +166,7 @@
 
           <div class="reviews">
             <h2>2 Reviews</h2>
-            <h3>From Jonny the June 18 2020</h3>
+            <h3>From Jonny the June 18 2017</h3>
             <ul>
               <li>
                 <p>
@@ -174,7 +174,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From Carson the April 22 2020</h3>
+            <h3>From fasil the April 22 2018</h3>
             <ul>
               <li>
                 <p>
@@ -232,7 +232,7 @@
 
           <div class="reviews">
             <h2>3 Reviews</h2>
-            <h3>From Michel the January 2 2021</h3>
+            <h3>From Michel the January 2 2018</h3>
             <ul>
               <li>
                 <p>
@@ -240,7 +240,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From Jean the March 23 2021</h3>
+            <h3>From Jean the March 23 2018</h3>
             <ul>
               <li>
                 <p>
@@ -249,7 +249,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From sol the May 1 2021</h3>
+            <h3>From Peter the May 1 2018</h3>
             <ul>
               <li>
                 <p>
@@ -284,7 +284,7 @@
           </div>
 
           <div class="user">
-            <strong>Owner:</strong> yoni</div>
+            <strong>Owner:</strong> Triss</div>
           <div class="description">
             Standard, non-occupied, five-bed, three-bath house in a quiet
             neighborhood. Based on all the other options on this site, I
@@ -319,7 +319,7 @@
 
           <div class="reviews">
             <h2>1 Review</h2>
-            <h3>From Alex the December 12 2022</h3>
+            <h3>From Marty the December 12 2018</h3>
             <ul>
               <li>
                 <p>Eh, it was okay.</p>
